# SCEPCal

./: .gitignore  CMakeLists.txt  README.md  edm4dr.yaml
batch/condor/: SCEPCalsim.sh  SCEPCalsim.sub
batch/slurm/: SCEPCal.slurm
compact/: SCEPCal.xml  SCEPCal_10x.xml
eventdisplay/: Notebook.ipynb  PDG_IDs.txt  eventdisplay.py
example/: SCEPCALanalysis.ipynb  dd4hep_steering_template.py  scepcal_steering.py
include/: DRCrystalHit.h  SCEPCalSegmentation.h  SCEPCal_MainSegmentation.h  SCEPCal_MainSegmentationHandle.h  SCEPCal_TimingSegmentation.h  SCEPCal_TimingSegmentationHandle.h
scripts/: convertROOT2HDF5.py  gamma_10MeV_opt_simplehit_edep0_n1.hdf5  gamma_10MeV_opt_simplehit_edep0_n1.root  scepcal.py  scepcal_steering.py  scepcal_utils.py
src/: DRCrystalHit.cpp  Geant4Output2EDM4hepDRCrystalHit.cpp  Geant4Output2EDM4hepDRCrystalHitSimple.cpp  SCEPCalConstructor.cpp  SCEPCalSDActionDRCrystalHit.cpp  SCEPCalSegmentation.cpp  SCEPCal_MainLayer.cpp  SCEPCal_MainSDAction.cpp  SCEPCal_MainSegmentation.cpp  SCEPCal_MainSegmentationHandle.cpp  SCEPCal_TimingLayer.cpp  SCEPCal_TimingSDAction.cpp  SCEPCal_TimingSegmentation.cpp  SCEPCal_TimingSegmentationHandle.cpp  SegmentationFactories.cpp
